# Bothouse-BE

./: .env.example  Cargo.toml  Dockerfile
migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_agents.sql  004_create_agent_stats.sql  005_create_rooms.sql  006_create_seats.sql  007_create_games.sql  008_create_game_players.sql  009_create_game_log.sql  010_create_game_results.sql  011_create_settlements.sql  012_add_analytics.sql  013_rename_wei_to_atomic.sql
src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
src/adapters/: mod.rs
src/adapters/ethereum/: settlement.rs
src/adapters/memory/: agent_store.rs  analytics_store.rs  auth_store.rs  cache_store.rs  event_bus.rs  game_store.rs  lobby_store.rs  mod.rs
src/adapters/onechain/: settlement.rs
src/adapters/postgres/: agent_store.rs  analytics_store.rs  auth_store.rs  game_store.rs  lobby_store.rs  mod.rs
src/adapters/redis/: cache_store.rs  event_bus.rs  mod.rs
src/adapters/reqwest/: http_client.rs
src/api/: mod.rs  openapi.rs  router.rs
src/api/handlers/: agents.rs  analytics.rs  auth.rs  games.rs  lobby.rs  manifest.rs  mod.rs  settlement.rs
src/domain/: agent.rs  analytics.rs  auth.rs  game.rs  lobby.rs  mod.rs  settlement.rs
src/games/: mod.rs
src/ports/: agent_store.rs  analytics_store.rs  auth_store.rs  cache_store.rs  event_bus.rs  game_store.rs  http_client.rs  lobby_store.rs  mod.rs  settlement_port.rs
src/services/: agent_service.rs  auth_service.rs  game_service.rs  lobby_service.rs  metrics_service.rs  mod.rs  settlement_service.rs
tests/: integration_test.rs
(+6 files in other folders)
