[package]
name = "bothouse-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "bothouse_backend"
path = "src/lib.rs"

[[bin]]
name = "bothouse-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
alloy = { version = "0.3", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
bcs = "0.1"
base64 = "0.22"
blake2b_simd = "1"
dotenvy = "0.15"
url = "2"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
